Fix page body width on mobile

--- a/css/global.css
+++ b/css/global.css
@@ -94,6 +94,7 @@ main {
     flex: 1;
     padding: 32px;
     font-size: 1rem;
+    width: 100%;
 }
 
 main section {
