--- a/css/project.css
+++ b/css/project.css
@@ -107,3 +107,14 @@ tr:hover {
 .call-to-action-download .text .subtitle {
     color: var(--secondary-text);
 }
+
+@media only screen and (max-width: 480px) {
+    .call-to-action-download .text .subtitle {
+        font-size: 0.5rem;
+    }
+}
+
+.overflowed-table {
+    width: 100%;
+    overflow-y: scroll;
+}
